# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.21 2005/01/05 07:22:20 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)
  
  05 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Change all the math in Partitioning.py to work with sectors instead of
  cylinders.

  04 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  A few tweaks to make it "work" with the GLIStorageDevice changes.

  21 Dec 2004; John Laliberte <allanonl@bu.edu>
  Daemons.py, Bootloader.py, Kernel.py, Stage.py, PortageTree.py, 
  MakeDotConf.py, RcDotConf.py now selects/loads the appropriate 
  options if a profile is loaded.  They are selected when each screen 
  is activated.
  In Timezone.py,Users.py
  Removed deprecation warning caused by gtk.OptionMenu() in Widgets.py.
  Removed some old debug values that were unnecessary.
  Integrated the Stage tarball URI, it nows loads from a profile and checks
  to make sure its a valid value by changing the background to pink.
  Created a test profile, "test_installprofile.xml" that selects different
  options illustrating the changes.
  Stage.py: Now doesn't change screens if the URI is invalid.
  Timezone.py: Changed the entire layout.  Made a recursive function to
  populate the treeview with the timezones from /usr/share/zoneinfo.
  
  20 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Partition screen "complete" with idiot-proofed goodness! Minor modification
  for info display when creating logical partition. Slider color changes to
  match selected filesystem when creating new partition.

  19 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
  Exit button works. Load button works. Save button works. Minor fixes to
  NetworkMounts due to switch to ComboBox for Type field. Old resize slider
  is now "new partition" slider. Partition screen adds/removes partitions.

  18 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>