@@ -1,9 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.21 2005/01/05 07:22:20 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.22 2005/01/10 00:40:31 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
   
+  09 Jan 2005; John Laliberte <allanonl@bu.edu>
+  Timezone.py - Updated so it now is integrated with the backend.
+  When you select and item in the tree that is not a node,
+  ( you need to press enter or double-click ) it will set your timezone.
+
   05 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Change all the math in Partitioning.py to work with sectors instead of
   cylinders.
